# esp32-c6-1.47inchj

./: README.md
blink/: sdkconfig
blink/main/: blink_example_main.c
hello_world/: sdkconfig
hello_world/main/: hello_world_main.c
imu/: CMakeLists.txt  README.md  sdkconfig
imu/components/imu/: CMakeLists.txt  imu.c  imu.h  madgwick.c  mahony.c  math_helper.h  mpu9250.c  mpu9250_i2c.c
imu/main/: CMakeLists.txt  app_main.c  idf_component.yml  imu_config.c  imu_config.h  imu_task.c  imu_task.h  my_lvgl_app.c  my_lvgl_app.h  web_server.c  web_server.h  wifi.c
imu/web-front/: package.json
imu/web-front/src/: App.vue
imu/web-front/src/components/: CalibrationView.vue  CreditsView.vue  DashboardView.vue  SettingsView.vue
imu/web-front/src/store/: imuStore.js
lcd/: CMakeLists.txt  sdkconfig  sdkconfig.old
lcd/main/: CMakeLists.txt  app_main.c  st7789_lcd.c  st7789_lcd.h
lvgl/: CMakeLists.txt  sdkconfig  sdkconfig.old
lvgl/main/: CMakeLists.txt  app_main.c  idf_component.yml  lvgl_port_intf.c  lvgl_port_intf.h  my_lvgl_app.c  st7789_lcd.c  st7789_lcd.h
